# FlyWrapper

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
assets/shaders/MeshShading/: MeshletMS.hlsl
assets/shaders/ModelView/: PixelShader.hlsl  VertexShader.hlsl
assets/shaders/Stencil/: Resolve.hlsl
cmake/: compiler_settings.cmake  shader_parser.cmake
src/: CMakeLists.txt
src/Apps/: CMakeLists.txt
src/Apps/DispatchIndirect/: CMakeLists.txt  main.cpp
src/Apps/DxrTriangle/: CMakeLists.txt  main.cpp
src/Apps/Indirect/: CMakeLists.txt  main.cpp
src/Apps/MeshShading/: CMakeLists.txt  main.cpp
src/Apps/ModelView/: CMakeLists.txt  main.cpp
src/Apps/RayQuery/: CMakeLists.txt  main.cpp
src/Apps/Stencil/: CMakeLists.txt  main.cpp
src/Apps/Triangle/: CMakeLists.txt  main.cpp
src/Apps/VariableRateShading/: CMakeLists.txt  main.cpp
src/Modules/: CMakeLists.txt
src/Modules/Camera/: Camera.cpp  Camera.h
src/Modules/Geometry/: Bones.cpp  Bones.h  CMakeLists.txt  IABuffer.h  IMesh.h  IModel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
src/Modules/Render/ObjectCache/: CMakeLists.txt  ObjectCache.cpp  ObjectCache.h
src/Modules/Render/RenderCommandList/: CMakeLists.txt  RenderCommandList.h  (+2 more)
src/Modules/Render/RenderDevice/: BufferLayout.cpp  BufferLayout.h  CMakeLists.txt  Program.cpp  Program.h  ProgramHolder.h  RenderDevice.h  RenderDeviceImpl.cpp  RenderDeviceImpl.h  RenderTypes.h  ResourceStateTracker.cpp  ResourceStateTracker.h
src/Modules/Texture/: CMakeLists.txt  TextureCache.cpp  TextureCache.h  TextureInfo.h  TextureLoader.cpp  TextureLoader.h
src/Tools/ShaderParser/: CMakeLists.txt  ShaderParser.cpp  ShaderParser.h  main.cpp
(+1 files in other folders)
